# QuestStereoMatching

./: .gitignore  README.md
native/: .gitignore  CMakeLists.txt  README.md  executorch_module_utils.cpp  executorch_module_utils.h  pc_stereo.cpp  stereo_cam_ndk.cpp  stereo_cam_ndk.h  stereo_match_executorch.cpp  stereo_match_executorch.h  stereo_match_sgbm.cpp  stereo_match_sgbm.h
unity/Assets/Oculus/: OculusProjectConfig.asset
unity/Assets/Plugins/Android/: AndroidManifest.xml
unity/Assets/Resources/: OculusRuntimeSettings.asset
unity/Assets/Scripts/Input/: AnimationParameterSetter.cs  ButtonPressedUnityEvent.cs  ToggleValueUnityEvent.cs
unity/Assets/Settings/: Mobile_Renderer.asset  PC_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
unity/Assets/StereoMatching/Config/: BANetConfigAsset.asset  SGBMConfigAsset.asset
unity/Assets/StereoMatching/Materials/: PointCloudMaterial.mat
unity/Assets/StereoMatching/Scenes/: StereoMatchingScene.unity
unity/Assets/StereoMatching/Scripts/Runtime/: StereoMatching.asmdef  StereoRunner.cs
unity/Assets/StereoMatching/Scripts/Runtime/Core/: BANetConfigAsset.cs  Native.cs  SGBMConfigAsset.cs  StereoRunner.cs
unity/Assets/StereoMatching/Scripts/Runtime/Utils/: HeadsetCameraPermission.cs
unity/Assets/StereoMatching/Scripts/Runtime/View/: PointCloudFeature.cs  PointCloudPresenter.cs
unity/Assets/StereoMatching/Shaders/: PointCloud_Billboard.shader
unity/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
unity/Assets/XR/Settings/: OpenXR Package Settings.asset
unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
unity/QuestStereoMatching_BurstDebugInformation_DoNotShip/tempburstlibs/arm64-v8a/: lib_burst_generated.txt
